--- a/kid.html
+++ b/kid.html
@@ -1,173 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ageflix - Home</title>
-<style>
-  * {box-sizing:border-box; margin:0; padding:0; font-family:Arial, sans-serif;}
-  body {background:#000; color:#fff;}
-  .navbar {display:flex; justify-content:space-between; align-items:center; padding:10px 20px; background:#111;}
-  .logo {color:red; font-size:28px; font-weight:bold;}
-  .navbar ul {display:flex; list-style:none;}
-  .navbar ul li {margin:0 15px;}
-  .navbar ul li a {color:#fff; text-decoration:none; font-weight:bold;}
-  .slider {position:relative; overflow:hidden; max-width:100%; height:400px; margin:20px 0;}
-  .slide {position:absolute; width:100%; height:100%; opacity:0; transition:opacity 1s ease-in-out;}
-  .slide.active {opacity:1; z-index:2;}
-  .slide img {width:100%; height:100%; object-fit:cover;}
-  .prev, .next {position:absolute; top:50%; transform:translateY(-50%); background:rgba(0,0,0,0.5); color:#fff; border:none; padding:10px; cursor:pointer; font-size:24px; z-index:3;}
-  .prev {left:10px;}
-  .next {right:10px;}
-  .dots {position:absolute; bottom:10px; left:50%; transform:translateX(-50%); display:flex; gap:8px; z-index:3;}
-  .dot {width:12px; height:12px; border-radius:50%; background-color:rgba(255,255,255,0.5); cursor:pointer;}
-  .dot.active {background:#fff;}
-  #startBtn {display:block; margin:20px auto; padding:12px 30px; font-size:18px; background:#e50914; color:#fff; border:none; border-radius:5px; cursor:pointer;}
-  #popup, #loading-screen {position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); display:flex; justify-content:center; align-items:center; z-index:9999; flex-direction:column;}
-  .popup-content {background:#111; border:2px solid #e50914; padding:30px 50px; border-radius:10px; text-align:center; color:#fff; max-width:90%; width:450px;}
-  .popup-content h2 {font-size:32px; margin-bottom:20px;}
-  #nextBtn {background:#e50914; color:#fff; border:none; padding:12px 40px; border-radius:5px; font-size:18px; cursor:pointer;}
-  .loader {border:6px solid #f3f3f3; border-top:6px solid #e50914; border-radius:50%; width:70px; height:70px; animation:spin 1s linear infinite; margin-bottom:20px;}
-  @keyframes spin {0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
-  #countdown-bar {width:100%; height:10px; background:#333; border-radius:5px; margin-top:15px; overflow:hidden;}
-  #countdown-fill {width:0%; height:100%; background:#e50914; transition:width 1s linear;}
-  #label-container {font-size:20px; margin-top:10px; text-align:left;}
-  #webcam-container video, #webcam-container canvas {border:2px solid #e50914; border-radius:10px;}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ageflix - Home</title>
+  <style>
+    * { box-sizing: border-box; margin:0; padding:0; font-family: Arial, sans-serif; }
+    body { background-color: #000; color: #fff; }
+
+    /* Navbar */
+    nav.navbar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background-color: #111;
+      padding: 10px 20px;
+      flex-wrap: wrap;
+    }
+    .navbar .logo { font-size: 24px; font-weight: bold; color: red; flex: 1; }
+    .navbar ul { display: flex; list-style: none; justify-content: center; flex:2; }
+    .navbar ul li { margin: 0 15px; }
+    .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
+    .navbar .icon { flex: 1; text-align: right; }
+
+    /* Banner Slider */
+    .banner-slider { position: relative; overflow: hidden; max-width: 100%; height: 400px; margin-bottom:20px; }
+    .slide { position: absolute; width: 100%; height: 100%; opacity: 0; transition: opacity 1s ease-in-out; }
+    .slide.active { opacity: 1; z-index: 2; }
+    .slide img { width: 100%; height: 100%; object-fit: cover; }
+    .prev, .next { position: absolute; top: 50%; transform: translateY(-50%); background-color: rgba(0,0,0,0.5); color: #fff; border: none; padding: 10px; cursor: pointer; font-size: 24px; z-index: 3; }
+    .prev { left: 10px; }
+    .next { right: 10px; }
+    .dots { position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; z-index: 3; }
+    .dot { width: 12px; height: 12px; border-radius: 50%; background-color: rgba(255,255,255,0.5); cursor: pointer; }
+    .dot.active { background-color: #fff; }
+
+    /* Hero / Age Detection */
+    section.hero { text-align: center; padding: 20px; }
+    section.hero h1 { font-size: 32px; margin-bottom: 10px; }
+    section.hero p { font-size: 20px; margin-bottom: 20px; }
+    button#startBtn { padding: 10px 20px; font-size: 18px; cursor: pointer; background-color: #e50914; border:none; border-radius:5px; color:white; transition:0.3s;}
+    button#startBtn:hover{background-color:#b00610;}
+
+    /* Popup style */
+    #popup, #result-popup, #loading-screen{
+      position: fixed; top:0; left:0; width:100%; height:100%; display:flex; justify-content:center; align-items:center; z-index:9999;
+    }
+    #popup, #result-popup { background: rgba(0,0,0,0.9); }
+    .popup-content, .result-content{
+      background:#111; border:2px solid #e50914; padding:30px 50px; border-radius:10px;
+      text-align:center; color:white; box-shadow:0 0 20px rgba(229,9,20,0.6); max-width:600px; width:90%;
+    }
+    .popup-content h2, .result-content h2{ font-size:28px; margin-bottom:20px;}
+    #nextBtn{background-color:#e50914;color:white;border:none;padding:12px 40px;border-radius:5px;font-size:18px;cursor:pointer;transition:0.3s;}
+    #nextBtn:hover{background-color:#b00610;}
+
+    .loader{
+      border:6px solid #f3f3f3; border-top:6px solid #e50914; border-radius:50%;
+      width:70px; height:70px; animation:spin 1s linear infinite; margin-bottom:25px;
+    }
+    .loading-text{font-size:20px;color:#fff;}
+    @keyframes spin { 0%{transform:rotate(0deg);}100%{transform:rotate(360deg);} }
+  </style>
 </head>
 <body>
 
-<nav class="navbar">
-  <div class="logo">Ageflix</div>
-  <ul>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Movies</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-</nav>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="logo">Ageflix</div>
+    <ul>
+      <li><a href="about.html">About</a></li>
+      <li><a href="movies.html">Movies</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+    <div class="icon">🎬</div>
+  </nav>
 
-<div class="slider">
-  <div class="slide active"><img src="1.jpg" alt="Banner 1"></div>
-  <div class="slide"><img src="2.jpg" alt="Banner 2"></div>
-  <button class="prev">&#10094;</button>
-  <button class="next">&#10095;</button>
-  <div class="dots"></div>
-</div>
+  <!-- Banner Slider -->
+  <section class="banner-slider" id="bannerSlider">
+    <div class="slide active"><img src="1.jpg" alt="Banner 1"></div>
+    <div class="slide"><img src="2.jpg" alt="Banner 2"></div>
+    <button class="prev">&#10094;</button>
+    <button class="next">&#10095;</button>
+    <div class="dots"></div>
+  </section>
 
-<button id="startBtn">Start Camera & Detect Age</button>
+  <!-- Hero / Age Detection -->
+  <section class="hero">
+    <h1>Welcome to Ageflix</h1>
+    <p>Discover movies according to your age group!</p>
+    <button id="startBtn">Start Camera & Detect Age</button>
+  </section>
 
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
-<script>
-const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
-let model, webcam, maxPredictions;
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
+  <script>
+    const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
+    let model, webcam, maxPredictions;
+    let detected = false;
+    let countdownInterval;
 
-async function init() {
-  const modelURL = URL + "model.json";
-  const metadataURL = URL + "metadata.json";
-  model = await tmImage.load(modelURL, metadataURL);
-  maxPredictions = model.getTotalClasses();
+    async function init() {
+      const modelURL = URL + "model.json";
+      const metadataURL = URL + "metadata.json";
+      model = await tmImage.load(modelURL, metadataURL);
+      maxPredictions = model.getTotalClasses();
 
-  webcam = new tmImage.Webcam(400, 300, true);
-  await webcam.setup();
-  await webcam.play();
+      const flip = true;
+      webcam = new tmImage.Webcam(300, 225, flip); // اصغر حجم الكميرا
+      await webcam.setup();
+      await webcam.play();
 
-  showPopupAnalysis();
-}
-
-function showPopupAnalysis(){
-  const popup = document.createElement("div");
-  popup.id = "popup";
-  popup.innerHTML = `
-    <div class="popup-content">
-      <h2>Analyzing your face...</h2>
-      <div id="webcam-container"></div>
-      <div id="label-container"></div>
-      <div id="countdown-bar"><div id="countdown-fill"></div></div>
-    </div>
-  `;
-  document.body.appendChild(popup);
-  document.getElementById("webcam-container").appendChild(webcam.canvas);
-
-  let totalTime = 20;
-  let seconds = totalTime;
-  const countdownFill = document.getElementById("countdown-fill");
-  const labelContainer = document.getElementById("label-container");
-
-  const interval = setInterval(async () => {
-    await webcam.update();
-    const prediction = await model.predict(webcam.canvas);
-
-    labelContainer.innerHTML = "";
-    prediction.forEach(p => {
-      labelContainer.innerHTML += `<p>${p.className}: ${(p.probability*100).toFixed(1)}%</p>`;
-    });
-
-    countdownFill.style.width = `${((totalTime - seconds) / totalTime) * 100}%`;
-
-    seconds--;
-    if(seconds < 0){
-      clearInterval(interval);
-      showResult(prediction);
+      showPopupWithCamera();
+      window.requestAnimationFrame(loop);
     }
-  }, 1000);
-}
 
-function showResult(prediction){
-  const best = prediction.reduce((a,b)=>a.probability>b.probability?a:b);
-  const popup = document.getElementById("popup");
-  popup.innerHTML = `
-    <div class="popup-content">
-      <h2>Your age group is <span>${best.className}</span></h2>
-      <button id="nextBtn">Next ➜</button>
-    </div>
-  `;
-  document.getElementById("nextBtn").addEventListener("click", () => {
-    popup.innerHTML = `
-      <div class="popup-content">
-        <div class="loader"></div>
-        <p>Loading your suitable movies...</p>
-      </div>
-    `;
-    setTimeout(() => {
-      if(best.className.toLowerCase().includes("kid")) window.location.href = "kids.html";
-      else if(best.className.toLowerCase().includes("adult")) window.location.href = "adult.html";
-      else if(best.className.toLowerCase().includes("senior")) window.location.href = "senior.html";
-      else window.location.reload();
-    }, 3000);
-  });
-}
+    async function loop() {
+      webcam.update();
+      await predict();
+      if(!detected) window.requestAnimationFrame(loop);
+    }
 
-// Slider logic
-const slides = document.querySelectorAll(".slide");
-const prevBtn = document.querySelector(".prev");
-const nextBtn = document.querySelector(".next");
-const dotsContainer = document.querySelector(".dots");
-let slideIndex = 0;
-function showSlide(index){
-  if(index < 0) slideIndex = slides.length - 1;
-  else if(index >= slides.length) slideIndex = 0;
-  else slideIndex = index;
-  slides.forEach((s,i) => {
-    s.classList.remove("active");
-    if(dotsContainer.children[i]) dotsContainer.children[i].classList.remove("active");
-  });
-  slides[slideIndex].classList.add("active");
-  if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add("active");
-}
-slides.forEach((_, i) => {
-  const dot = document.createElement("span");
-  dot.classList.add("dot");
-  if(i === 0) dot.classList.add("active");
-  dot.addEventListener("click", () => showSlide(i));
-  dotsContainer.appendChild(dot);
-});
-prevBtn.addEventListener("click", () => showSlide(slideIndex - 1));
-nextBtn.addEventListener("click", () => showSlide(slideIndex + 1));
-setInterval(() => showSlide(slideIndex + 1), 5000);
+    async function predict() {
+      const prediction = await model.predict(webcam.canvas);
+      const labelContainer = document.getElementById("label-container");
+      if(labelContainer){
+        labelContainer.innerHTML = "";
+        prediction.forEach(p=>{
+          const pElem = document.createElement("p");
+          pElem.innerText = `${p.className}: 0%`;
+          labelContainer.appendChild(pElem);
+          let percent = 0;
+          const interval = setInterval(()=>{
+            if(percent >= Math.floor(p.probability*100)){
+              clearInterval(interval);
+            } else {
+              percent++;
+              pElem.innerText = `${p.className}: ${percent}%`;
+            }
+          }, 20);
+        });
+      }
 
-document.getElementById("startBtn").addEventListener("click", init);
-</script>
+      const best = prediction.reduce((a,b)=> a.probability>b.probability?a:b);
+      if(best.probability>0.85 && !detected){
+        detected = true;
+        clearInterval(countdownInterval);
+        setTimeout(()=> showResult(best.className), 500);
+      }
+    }
 
+    function showPopupWithCamera(){
+      const popup = document.createElement("div");
+      popup.id = "popup";
+      popup.innerHTML = `
+        <div class="popup-content">
+          <h2>Analyzing your face...</h2>
+          <div id="webcam-container"></div>
+          <div id="label-container"></div>
+          <p id="countdown">20</p>
+        </div>
+      `;
+      document.body.appendChild(popup);
+      document.getElementById("webcam-container").appendChild(webcam.canvas);
+
+      let timeLeft = 20;
+      const countdownElem = document.getElementById("countdown");
+      countdownInterval = setInterval(()=>{
+        timeLeft--;
+        countdownElem.innerText = timeLeft;
+        if(timeLeft <=0) clearInterval(countdownInterval);
+      },1000);
+    }
+
+    function showResult(ageGroup){
+      document.getElementById("popup").remove();
+      const resultPopup = document.createElement("div");
+      resultPopup.id = "result-popup";
+      resultPopup.innerHTML = `
+        <div class="result-content">
+          <h2>Your Age Group: ${ageGroup}</h2>
+          <button id="nextBtn">Next</button>
+        </div>
+      `;
+      document.body.appendChild(resultPopup);
+
+      document.getElementById("nextBtn").addEventListener("click",()=>{
+        resultPopup.remove();
+        showLoadingScreen();
+        setTimeout(()=>{
+          if(ageGroup.toLowerCase() === "adult") window.location.href = "adult.html";
+          else if(ageGroup.toLowerCase() === "senior") window.location.href = "senior.html";
+          else window.location.href = "kids.html";
+        },3000);
+      });
+    }
+
+    function showLoadingScreen(){
+      const loading = document.createElement("div");
+      loading.id = "loading-screen";
+      loading.innerHTML = `
+        <div class="popup-content">
+          <div class="loader"></div>
+          <p class="loading-text">Loading movies for you...</p>
+        </div>
+      `;
+      document.body.appendChild(loading);
+    }
+
+    document.getElementById("startBtn").addEventListener("click", init);
+
+    // Slider
+    const slides = document.querySelectorAll(".slide");
+    const prev = document.querySelector(".prev");
+    const next = document.querySelector(".next");
+    const dotsContainer = document.querySelector(".dots");
+    let currentSlide = 0;
+
+    slides.forEach((s,i)=>{
+      const dot = document.createElement("div");
+      dot.classList.add("dot");
+      if(i===0) dot.classList.add("active");
+      dot.addEventListener("click",()=>showSlide(i));
+      dotsContainer.appendChild(dot);
+    });
+    const dots = document.querySelectorAll(".dot");
+
+    function showSlide(index){
+      slides[currentSlide].classList.remove("active");
+      dots[currentSlide].classList.remove("active");
+      currentSlide = index;
+      slides[currentSlide].classList.add("active");
+      dots[currentSlide].classList.add("active");
+    }
+    prev.addEventListener("click",()=>showSlide((currentSlide-1+slides.length)%slides.length));
+    next.addEventListener("click",()=>showSlide((currentSlide+1)%slides.length));
+  </script>
 </body>
 </html>
